# allotmint

./: .aider.conf.yml  .aiderignore  .coveragerc  .dockerignore  .env  .env.example  .env.lambda.example  .env.local.example  .gitattributes  .gitignore  .ignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODEBASE_REVIEW.md  CODE_OF_CONDUCT.md  DEPLOY.md  Dockerfile  Dockerfile.app  Dockerfile.dev  Dockerfile.frontend  Jenkinsfile  LICENSE  Makefile  OBSERVABILITY.md  README.md  SECURITY.md  TODO.md  USER_README.md  api_test_cases.yaml  config.example.yaml  config.lambda.yaml  config.yaml  deploy-to-AWS.ps1  docker-compose.lambda.yml  docker-compose.local.yml  docker-compose.yml  logging.ini  mypy.ini  package-lock.json  (+11 more)
.ci/: Jenkinsfile.ai  README.md  ai_apply.sh  ai_apply_chunked.sh  prompt.md  test-setup.sh  test_lm_studio.sh  validate.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  copilot-instructions.md  dependabot.yml
.run/: Deploy to AWS.run.xml  Python tests in tests.run.xml  build-and-deploy.ps1.run.xml  check_portfolio_health.run.xml  crawl_and_analyze.run.xml  deploy UI to AWS.run.xml  deploy backend to AWS.run.xml  npm run build.run.xml  npm run test.run.xml  reconcile_drawdown.run.xml  run actions.run.xml  run frontend.run.xml  run linter.run.xml  run-backend.ps1.run.xml  run-frontend.ps1.run.xml  run_trading_agent.run.xml  site_snapshot.run.xml  smoke-test.ps1.run.xml  test-with-coverage.ps1.run.xml
backend/: Dockerfile  Dockerfile.lambda  UPGRADE_NOTES.md  __init__.py  alerts.py  app.py  auth.py  config.py  contracts_spa.py  logging.ini  logging_setup.py  nudges.py  pyproject.toml  reports.py  requirements-lambda.txt  requirements-test.txt  requirements.txt
cdk/: app.py  cdk.json  requirements.txt
data/: events.json  jpm.json  scaling_overrides.json  trail.json
data-schemas/: isa.schema.json
docs/: ASSETS.md  (+39 more)
(+1469 files in other folders)
