[project]
requires-python = ">=3.11"
dependencies = [
    "reportlab>=4.4.3",
]

[project.optional-dependencies]
test = [
    "pytest~=9.0.3",
    "pytest-cov~=7.1.0",
    "pytest-asyncio~=1.3.0",
]

[tool.pytest.ini_options]
addopts = "--cov=backend --cov-fail-under=90"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["asyncio: mark tests that require asyncio support"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
