[project]
requires-python = ">=3.11"
dependencies = [
    "reportlab>=4.4.3",
]

[project.optional-dependencies]
test = [
    "pytest~=9.0.3",
    "pytest-cov~=7.1.0",
    "pytest-asyncio~=1.4.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
